Fixed trade-in process product selection overflow clipping

--- a/src/app/features/trade-in-requests/trade-in-request-jewelry-condition/trade-in-request-jewelry-condition.component.scss
+++ b/src/app/features/trade-in-requests/trade-in-request-jewelry-condition/trade-in-request-jewelry-condition.component.scss
@@ -5,20 +5,8 @@ h4 {
     margin: 20px 0px 0px 0px;
 }
 .trade-in-grid  {
-    width: 100%;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
-    max-height: 500px;
 }
 .trade-in-grid  > * {
     --aspect-ratio: 1/0.2;
-    position: relative;
-}
-.trade-in-grid  > .keep-aspect::before {
-    content: "";
-    display: inline-block;
-    width: 0px;
-    height: 0;
-    padding-bottom: calc(100% / (var(--aspect-ratio)));
 }
