--- a/src/app/features/trade-in-requests/trade-in-request-jewelry-material/trade-in-request-jewelry-material.component.scss
+++ b/src/app/features/trade-in-requests/trade-in-request-jewelry-material/trade-in-request-jewelry-material.component.scss
@@ -2,19 +2,8 @@ h3 {
     padding: 10px 0px;
 }
 .trade-in-grid  {
-    width: 100%;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
 }
 .trade-in-grid  > * {
     --aspect-ratio: 1/1;
-    position: relative;
-}
-.trade-in-grid  > .keep-aspect::before {
-    content: "";
-    display: inline-block;
-    width: 1px;
-    height: 0;
-    padding-bottom: calc(100% / (var(--aspect-ratio)));
 }
