--- a/src/app/features/trade-in-requests/trade-in-request-jewelry-selection/trade-in-request-jewelry-selection.component.scss
+++ b/src/app/features/trade-in-requests/trade-in-request-jewelry-selection/trade-in-request-jewelry-selection.component.scss
@@ -2,22 +2,14 @@ h3 {
     padding: 10px 0px;
 }
 .trade-in-grid  {
-    width: 100%;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
     max-height: 500px;
     overflow-y: scroll;
-    padding: 20px 10px 20px 10px;
+    padding: 10px 10px 20px 10px;
 }
 .trade-in-grid > * {
     --aspect-ratio: 1/1;
-    position: relative;
-}
-.trade-in-grid  > .keep-aspect::after {
-    content: "";
-    display: inline-block;
-    width: 0px;
-    height: 0;
-    padding-bottom: calc(100% / (var(--aspect-ratio)));
+    margin-bottom: 10px;
 }
